--- a/README
+++ b/README
@@ -1,4 +1,54 @@
-This is your new Play application
-=================================
+##########################################################################################
+##########################################################################################
 
-This file will be packaged with your application, when using `activator dist`.
+                     INSTRUCTIONS TO SET UP THE JENTITY REPO AND PROJECT
+
+##########################################################################################
+##########################################################################################
+
+###
+###  1. YOU WILL NEED THE FOLLOWING INSTALLED TO CREATE ECLIPSE PROJECT FILES 
+###   -- JDK 1.8 
+###   -- GIT
+###  GET THE PROJECT FROM OUR GIT REPO, Run the Command below in your SHELL. Replace gadre by your username 
+
+git clone https://github.com/allnash/JEntity.git
+ 
+### 2. Once Downloaded please cd into the following folder, run the command below
+
+cd JEntity
+
+###
+### 3. Install the following
+###   -- Apache COUCH DB from Apache site
+###      to Run this thing. 
+###
+
+###
+### 4. Create a Couch DB database
+###    (Optionally if you already have a couch db user/password please create a new acccount
+###     username: admin
+###     password: password 
+###     using the Web Console URL: http://127.0.0.1:5984/_utils/ 
+###     on the right hand side in the coloumn look all the way to the bottom, there are two links sign up and login, 
+###     Use Sign up and create an account. Or do the below, its easier)
+
+export HOST="http://127.0.0.1:5984"
+
+curl -X PUT $HOST/database
+{"ok":true}
+
+# Create a new account by doing this.
+curl -X PUT $HOST/_config/admins/admin -d '"password"'
+
+# Create database db-test in CouchDB and use the username and password above. Modify conf/application.conf if you need to
+
+### 6. Run the Project
+
+./activator run
+
+###
+### 7. Hit the Web console http://localhost:9000 
+###    For the first HTTP request it will pop up a red screen and ask you to run a SQL script and migrate the database.
+###    Dont worry, this will set up your database and seed it will all accounts, messages, notification, etc etc. 
+###    
